Finshing date view (4) Also changing fonts Fixing overlap of arcs and dates

--- a/visualization/style.css
+++ b/visualization/style.css
@@ -7,12 +7,12 @@ body {
 }
 
 .graph_line {
-    stroke: rgb(255, 182, 72);
+    stroke: #FFA34C;
 }
 
 .graph_date {
-    fill: #ffb648;
-    font-family: 'VT323', monospace;
+    fill: #FFA34C;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .graph_date-text {
@@ -51,11 +51,11 @@ body {
     width: 90%;
     height: 15%;
     font-size: 6vw;
-    color:steelblue;
+    color:#4073FF;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'VT323', monospace;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 #detail_words #appearance {
@@ -63,27 +63,36 @@ body {
     top: 25%;
     width: 100%;
     height: 33%;
+
 }
+
+
 #detail_words #appearance #a_first{
     position: absolute;
     top: 20%;
     left: 0%;
-    width: 33%;
+    width: 25%;
     height: 80%;
+    box-shadow: 0px 0px 15px 5px #4073FF;
+    border-radius: 10px;
 }
 #detail_words #appearance #a_most{
     position: absolute;
     top: 0%;
-    left: 33%;
-    width: 33%;
+    left: 37.5%;
+    width: 25%;
     height: 80%;
+    box-shadow: 0px 0px 15px 5px #4073FF;
+    border-radius: 10px;
 }
 #detail_words #appearance #a_last{
     position: absolute;
     top: 20%;
-    left: 66%;
-    width: 33%;
+    left: 75%;
+    width: 25%;
     height: 80%;
+    box-shadow: 0px 0px 15px 5px #4073FF;
+    border-radius: 10px;
 }
 
 #detail_words #w_plot {
@@ -96,11 +105,12 @@ body {
 .detail_text {
     position: absolute;
     width: 100%;
-    top: 20%;
+    top: 10%;
+    height: 25%;
     font-size: 3vw;
     text-align: center;
-    color: #15DB95;
-    font-family: 'VT323', monospace;
+    color: #59FFC6;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .detail_date {
@@ -109,8 +119,8 @@ body {
     top: 40%;
     font-size: 2vw;
     text-align: center;
-    color: #15DB95;
-    font-family: 'VT323', monospace;
+    color: #59FFC6;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 #detail_day {
@@ -127,12 +137,12 @@ body {
     left: 5%;
     width: 90%;
     height: 15%;
-    font-size: 6vw;
-    color:steelblue;
+    font-size: 4vw;
+    color:#4073FF;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'VT323', monospace;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 #detail_day #day_word_cloud {
@@ -142,4 +152,8 @@ body {
     width: 100%;
 }
 
+.cloud_text {
+    font-family: 'Ubuntu', sans-serif;
+    text-anchor: middle;
+}
 
